# css-utility-cli

./: CMakeLists.txt  Makefile  README.md  REDME.md  css-utility  css-utility-cli.cr  css-utility.cr  data.yaml  index.html  install.sh  main.cpp  resources.sh  test.cpp
config/: build.h  build.yaml  build.yml  categories.h  categories.yml  normalize.min.h  screen.yaml  screens.h  state.yaml  states.h  states.yaml
config/property/: alignment.h  alignment.yaml  backgrounds.h  backgrounds.yaml  bgcolor.h  bgcolor.yaml  border.h  border.yaml  effects.h  effects.yaml  flexbox.h  flexbox.yaml  grid.h  interactivity.h  interactivity.yaml  layout.h  layout.yaml  sizing.h  sizing.yaml  spacing.h  spacing.yaml  tables.h  tables.yaml  transform.h  transform.yaml  typography.h  typography.yaml
config/property/h/: alignment.h  backgrounds.h  bgcolor.h  border.h  effects.h  flexbox.h  grid.h  interactivity.h  layout.h  sizing.h  spacing.h  tables.h  transform.h  typography.h
config/property/yml/: grid.yml  interactivity.yml  sizing.yml
gui/: background-color.min.css  index.html
includes/: build_project.h  create_project.h  global_build_default.h  global_css_category.h  global_css_property.h  helper.h  helperOptions.h  list_options.h  normalize.h  server.h  version.h  www_index.h  www_mastercss.h
includes/css_categories/: alignment.h  backgrounds.h  bgcolor.h  border.h  category_alignment.h  effects.h  flexbox.h  grid.h  interactivity.h  layout.h  sizing.h  spacing.h  tables.h  transforms.h  typography.h
includes/css_properties/: alignment.h  backgrounds.h  bgcolor.h  border.h  effects.h  flexbox.h  grid.h  interactivity.h  layout.h  sizing.h  spacing.h  tables.h  transforms.h  typography.h
includes/css_var/: global_color.h
includes/property/: alignment.h  backgrounds.h  bgcolor.h  effects.h  grid.h  tables.h  transforms.h  typography.h
lib/config/src/: config.cr
public/: index.html
src/: build_project.cpp  config.h  create_project.cpp  global_build_default.cpp  global_css_category.cpp  global_css_property.cpp  helper.h  helperOptions.cpp  helperOptions.h  init_project.cpp  list_options.cpp  main.cpp  server.cpp  version.cpp  version.h
src/css_categories/: alignment.cpp  backgrounds.cpp  bgcolor.cpp  border.cpp  category_alignment.cpp  effects.cpp  flexbox.cpp  grid.cpp  interactivity.cpp  layout.cpp  sizing.cpp  spacing.cpp  tables.cpp  transforms.cpp  typography.cpp
src/css_properties/: alignment.cpp  backgrounds.cpp  bgcolor.cpp  border.cpp  effects.cpp  flexbox.cpp  grid.cpp  interactivity.cpp  layout.cpp  sizing.cpp  spacing.cpp  tables.cpp  transforms.cpp  typography.cpp
src/css_var/: global_color.cpp
src/property/: border.h  flexbox.h  interactivity.h  layout.h  sizing.h  spacing.h
www/: index.html
www/css/: build.json
